project/test/syntax/bad/Bad66.ty
singleton class Expressions extends Something { 
    
    actions: {
        override someFunction: (f: get (x: Int) -> Int, g: get (x: Int) -> Bool) -> Bool = {
            get (x: Int, y: Char) -> {
                do (z: Int) -> {
                    get (w: Int) -> {
                        do (r: Int) {
                            3
                        }
                    }
                }
            }
        }
    }
}
